<resources>
    <string name="app_name" translatable="false">FastArchivate</string>
    <string name="navigation_drawer_open">Открыть навигационный драйвер</string>
    <string name="navigation_drawer_close">Закрыть навигационный драйвер</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Навигационная шапка</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Архивация</string>
    <string name="menu_gallery">Информация</string>
    <string name="create_archive">Создать архив</string>
    <string name="archive_name">Имя архива</string>
    <string name="rar" translatable="false">RAR</string>
    <string name="zip" translatable="false">ZIP</string>
    <string name="select_extension">Выберите разрешение</string>
    <string name="interface_settings">Интерфейс</string>
    <string name="theme_settings">Тема</string>
    <string name="dark">Темная</string>
    <string name="light">Светлая</string>
    <string name="contacts_header">Контакты</string>
    <string name="email" translatable="false">daniel.barchuk@yandex.ru</string>
    <string name="other_header">Другое</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</string>
    <string name="header_app_name" translatable="false">#Fast_Archiver</string>
    <string name="auto_theme">Авто</string>
    <string name="menu_slideshow">Слайдшоу</string>
    <string name="title_directory">Расположение</string>
    <string name="cd_open">Открыть</string>
    `</resources>